gcc/testsuite/rust/rustc/ui/parser/issues/issue-87217-keyword-order/const-async-const.rs
// { dg-additional-options "-frust-edition=2018" }

// Test that even when `const` is already present, the proposed fix is to remove the second `const`

const async const fn test() {}
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { help "" "" { target *-*-* } .-3 }
// { dg-note "" "" { target *-*-* } .-4 }
// { dg-error "" "" { target *-*-* } .-5 }
// { dg-note "" "" { target *-*-* } .-6 }
// { dg-note "" "" { target *-*-* } .-7 }

fn main() {}

